[improve] Description field
Phrase it as if it appeared as the last piece of breadcrumb in the job
invocation summary page (the one with a big green/red circle), beacuse
it does.

--- a/app/views/foreman_kubespray/job_templates/ansible_playbook_-_kubespray.erb
+++ b/app/views/foreman_kubespray/job_templates/ansible_playbook_-_kubespray.erb
@@ -1,6 +1,6 @@
 <%#
 name: Ansible Playbook - Kubespray
-description_format: Invoke Kubespray's main playbook (cluster.yml) on a host group
+description_format: Kubespray's main playbook (cluster.yml)
 snippet: false
 kind: job_template
 model: JobTemplate
