[feature] Avoid variable name clashes
Prepend `__DONOTWANT_` to any and all non-well-known inventory
variables that Foreman issues (where “well-known” means starting with
either `foreman`, `ansible_`, `kube_` or `kubespray_`)

--- a/app/views/foreman_kubespray/job_templates/ansible_playbook_-_kubespray.erb
+++ b/app/views/foreman_kubespray/job_templates/ansible_playbook_-_kubespray.erb
@@ -45,7 +45,9 @@ feature: kubespray_run
           {% for host in hostvars %}
                   {{ host }}:
                     {{ _foreman_inventory["_meta"]["hostvars"][host] | to_yaml |
-                       regex_replace('(?m)^kubespray_') | indent(width=10) }}
+                       regex_replace('(?m)^(?=\w)(?!ansible_|foreman|(kube(spray)?_))', '__DONOTWANT_') |
+                       regex_replace('(?m)^kubespray_') |
+                       indent(width=10) }}
           {% endfor %}
               # https://github.com/kubernetes-sigs/kubespray/blob/master/docs/ansible.md#inventory
               kube-node:
